--- a/assets/style.css
+++ b/assets/style.css
@@ -32,6 +32,10 @@ p {
     text-decoration: none;
 }
 
+.cards {
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
 .container {
     width: 100%;
     height: auto;
